<resources>
    <string name="app_name">SunriseKotlin</string>
    <string name="generate_button">Generate Times</string>
    <string name="placeholder_date">--/--/--</string>
    <string name="text_label_to">To</string>
    <string name="label_sunrise">SunRise:</string>
    <string name="label_sunset">Sunset:</string>
    <string name="new_location_label">Add new Location</string>
    <string name="title_add_location">Add Location</string>
    <string name="label_location_name">Name:</string>
    <string name="label_latitude_x">Latitude:</string>
    <string name="label_latitude_y">Longitude:</string>
    <string name="label_timezone">Timezone:</string>
</resources>
