<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <TableRow>
        <Spinner
                android:id = "@+id/locationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
        </Spinner>
    </TableRow>
    <TableRow>
        <Button
                android:id="@+id/new_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_location_label"
        />
    </TableRow>
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
    >
        <TextView
            android:id="@+id/fromDate"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/placeholder_date"
            android:textAlignment="center"
            android:inputType="date"
        />
        <TextView
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_label_to"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/toDate"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/placeholder_date"
            android:textAlignment="center"
            android:inputType="date"
        />
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/generate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:id="@+id/generate_button"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingBottom="100dp"
                android:clipToPadding="false"
        >
        </android.support.v7.widget.RecyclerView>
    </TableRow>

</TableLayout>