<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TableLayout
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/new_location_label"
                    android:textSize="40dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_add_location"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/label_location_name"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_location_name"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    android:text=""
                    android:ems="10"
                    android:id="@+id/input_location_name"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/label_latitude_x"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_latitude_y"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:ems="10"
                    android:id="@+id/input_latitude"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/label_latitude_y"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_timezone"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:ems="10"
                    android:id="@+id/input_longitude"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/new_location_button"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/new_location_label"
            />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>